[package]
name = "rsnano_ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rsnano_store_lmdb = { path = "../store_lmdb", features=["output_tracking"]}

[dependencies]
rsnano_core = { path = "../core" }
anyhow = "1"
once_cell = "1"
num-traits = "0"
num-derive = "0"
rand = {version="0" }
rsnano_store_lmdb = { path = "../store_lmdb" }
lmdb-rkv = "0.14"
serde_json = "1"
