[package]
name = "rsban_node_main"
version = "0.1.0"
authors = ["Gustav Schauwecker <service@simpago.com>"]
edition = "2021"

[[bin]]
name = "rsban_node"
path = "src/bin.rs"

[dependencies]
rsban_core = { path = "../core" }
rsban_messages = { path = "../messages" }
rsban_store_lmdb = { path = "../store_lmdb" }
rsban_node = { path = "../node" }
rsban_ledger = { path = "../ledger" }
rsban_rpc_server = { path = "../rpc_server" }
rsban_daemon = { path = "../daemon" }
rsban_nullable_console = { path = "../nullables/console" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.40"
rand = { version = "0.8.4" }
tokio = { version = "1", features = ["signal"] }
toml = "0.8.15"

[dev-dependencies]
assert_cmd = "2.0.14"
