[package]
name = "rsnano_messages"
version = "0.1.0"
authors = ["Gustav Schauwecker <service@simpago.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsnano_core = { path = "../core" }
anyhow = "1.0.40"
bitvec = "1.0.0"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
rand = { version = "0.8.4" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
static_assertions = "1.1.0"
