[package]
name = "rsnano_network"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
mock_instant = "0"

[dependencies]
rsnano_nullable_clock = { path = "../nullables/clock" }
rsnano_nullable_tcp = { path = "../nullables/tcp" }
rsnano_output_tracker = { path = "../nullables/output_tracker" }
rsnano_core = { path = "../core" }
num-traits = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-derive = "0"
rand = { version = "0" }
async-trait = "0"
tracing = "0.1"
anyhow = "1"
tokio-util = "0"
tokio = { version = "1", features = [
    "net",
] }
