[package]
name = "rsban_node"
version = "0.1.0"
authors = ["Gustav Schauwecker <service@simpago.com>"]
edition = "2021"

[features]
output_tracking = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
mock_instant = "0"
tracing-test = "0"
test_helpers = { path = "../tools/test_helpers" }

[dependencies]
rsban_core = { path = "../core" }
rsban_messages = { path = "../messages" }
rsban_network = { path = "../network" }
rsban_store_lmdb = { path = "../store_lmdb" }
rsban_output_tracker = { path = "../nullables/output_tracker" }
rsban_nullable_fs = { path = "../nullables/fs" }
rsban_nullable_tcp = { path = "../nullables/tcp" }
rsban_nullable_lmdb = { path = "../nullables/lmdb" }
rsban_nullable_http_client = { path = "../nullables/http_client" }
rsban_nullable_clock = { path = "../nullables/clock" }
rsban_ledger = { path = "../ledger" }
rsban_websocket_messages = { path = "../websocket_messages" }
anyhow = "1"
bitvec = "1"
blake2 = "0"
bounded-vec-deque = "0"
chrono = "0"
dirs = "5"
num = "0"
num-derive = "0"
num-traits = "0"
once_cell = "1"
rand = { version = "0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
siphasher = "1"
static_assertions = "1"
toml_edit = "0"
uuid = { version = "1", features = ["v4"] }
scoped_threadpool = "0.1.*"
backtrace = "0"
serde_variant = "0"
primitive-types = "0"
threadpool = "1"
timer = "0"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "macros",
    "sync",
] }
async-trait = "0"
tracing = "0"
ordered-float = "4"
tokio-tungstenite = "0"
futures-util = { version = "0", features = ["sink"] }
tokio-util = "0"
toml = "0"
strum = "0"
strum_macros = "0"
