[package]
name = "rsban_rpc_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rsban_core = { path = "../core" }
rsban_messages = { path = "../messages" }
rsban_network = { path = "../network" }
rsban_node = { path = "../node" }
rsban_ledger = { path = "../ledger" }
rsban_rpc_client = { path = "../rpc_client" }
rsban_nullable_clock = { path = "../nullables/clock" }
rsban_rpc_messages = { path = "../rpc_messages" }
rsban_store_lmdb = { path = "../store_lmdb" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["net"] }
anyhow = "1.0.40"
axum = "0.7.5"
toml = "0.8.15"
tracing = "0.1"
itertools = "0.13"
indexmap = "2"

[dev-dependencies]
test_helpers = { path = "../tools/test_helpers" }
