[workspace]
members = [
    "core",
    "nullables/output_tracker",
    "nullables/fs",
    "nullables/tcp",
    "nullables/lmdb",
    "nullables/http_client",
    "nullables/clock",
    "nullables/random",
    "messages",
    "rpc_messages",
    "store_lmdb",
    "ledger",
    "node",
    "ffi",
    "main",
    "tools/load_test",
    "tools/xtask",
    "tools/test_helpers", "nullables/http_client", "nullables/clock", "nullables/random", "rpc_messages", 
]
resolver = "2"
