[workspace]
members = [
    "core",
    "nullables/output_tracker",
    "nullables/fs",
    "nullables/tcp",
    "nullables/lmdb",
    "nullables/http_client",
    "nullables/clock",
    "nullables/random",
    "messages",
    "rpc_messages",
    "rpc_client",
    "rpc_server",
    "store_lmdb",
    "ledger",
    "node",
    "ffi",
    "main",
    "tools/load_test",
    "tools/xtask",
    "tools/test_helpers",
]
resolver = "2"
