[package]
name = "rsnano_websocket_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures-util = { version = "0", features = ["sink"] }
num-derive = "0"
num-traits = "0"
rsnano_core = { path = "../core" }
rsnano_messages = { path = "../messages" }
rsnano_node = { path = "../node" }
rsnano_websocket_messages = { path = "../websocket_messages" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "macros",
    "sync",
] }
tokio-tungstenite = "0"
tracing = "0"

[dev-dependencies]
futures-util = { version = "0", features = ["sink"] }
rsnano_ledger = { path = "../ledger" }
rsnano_messages = { path = "../messages" }
rsnano_node = { path = "../node" }
test_helpers = { path = "../tools/test_helpers" }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "macros",
    "sync",
] }
tokio-tungstenite = "0"