[package]
name = "rsban_websocket_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures-util = { version = "0", features = ["sink"] }
num-derive = "0"
num-traits = "0"
rsban_core = { path = "../core" }
rsban_messages = { path = "../messages" }
rsban_node = { path = "../node" }
rsban_websocket_messages = { path = "../websocket_messages" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "macros",
    "sync",
] }
tokio-tungstenite = "0"
tracing = "0"

[dev-dependencies]
futures-util = { version = "0", features = ["sink"] }
rsban_ledger = { path = "../ledger" }
rsban_messages = { path = "../messages" }
rsban_node = { path = "../node" }
test_helpers = { path = "../tools/test_helpers" }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "macros",
    "sync",
] }
tokio-tungstenite = "0"
